<resources>
    <string name="app_name">AgricolaCalculator</string>

    <string name="save">ZAPISZ</string>
    <string name="new_game">NOWA GRA</string>
    <string name="history">HISTORIA</string>
    <string name="back">POWRÓT</string>
    <string name="settings">USTAWIENIA</string>
    <string name="cancel">ANULUJ</string>
    <string name="games_saved">Gra została zapisana</string>
    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_new_game">Nowa gra</string>
    <string name="title_activity_history">Historia</string>
    <string name="title_activity_player">Gracz</string>
    <string name="title_activity_history_game">Historia gry</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="background_color">Wybierz kolor tła</string>
    <string name="black_color">Czarny</string>
    <string name="white_color">Biały</string>
    <string name="background_color_change">Kolor tła został zmieniony</string>
    <string name="player_name">Imię gracza</string>
    <string name="fields_label">Pola</string>
    <string name="pastures_label">Pastwiska</string>
    <string name="grain_label">Zboże</string>
    <string name="vegetables_label">Warzywa</string>
    <string name="game_name">Nazwa rozgrywki</string>
    <string name="saved">Zapisano</string>
    <string name="player_name_valid">Podaj imię gracza</string>
    <string name="game_name_valid">Podaj nazwę rozgrywki</string>
    <string name="fieldNo">"Liczba pól: "</string>
    <string name="pastureNo">"Liczba pastwisk: "</string>
    <string name="grainNo">"Liczba nasion: "</string>
    <string name="vegetablesNo">"Liczba warzyw: "</string>

</resources>
