<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.javamylove.agricolacalculator.activity.PlayerActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="false"
        android:fillViewport="false">


        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/player_name_text_edit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:hint="@string/player_name"
                bootstrap:be_roundedCorners="true" />

            <TextView
                android:id="@+id/fieldsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player_name_text_edit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="38dp"
                android:text="@string/fields_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff" />

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldsText"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                segmentedgroup:border_width="2dp"
                segmentedgroup:corner_radius="10dp">

                <RadioButton
                    android:id="@+id/field1"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:tag="-1"
                    android:text="0-1" />

                <RadioButton
                    android:id="@+id/field2"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="2" />

                <RadioButton
                    android:id="@+id/field3"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="3" />

                <RadioButton
                    android:id="@+id/field4"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="3"
                    android:text="4" />

                <RadioButton
                    android:id="@+id/field5"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="4"
                    android:text="5+" />
            </info.hoang8f.android.segmented.SegmentedGroup>

            <TextView
                android:id="@+id/pasturesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fields"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/pastures_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff" />

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pastures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/fields"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                segmentedgroup:border_width="2dp"
                segmentedgroup:corner_radius="10dp">

                <RadioButton
                    android:id="@+id/pasture1"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:tag="-1"
                    android:text="0" />

                <RadioButton
                    android:id="@+id/pasture2"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="1" />

                <RadioButton
                    android:id="@+id/pasture3"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="2" />

                <RadioButton
                    android:id="@+id/pasture4"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="3"
                    android:text="3" />

                <RadioButton
                    android:id="@+id/pasture5"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="4"
                    android:text="4+" />
            </info.hoang8f.android.segmented.SegmentedGroup>

            <TextView
                android:id="@+id/grainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pastures"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/grain_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff" />

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/grain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/pastures"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                segmentedgroup:border_width="2dp"
                segmentedgroup:corner_radius="10dp">

                <RadioButton
                    android:id="@+id/grain1"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:tag="-1"
                    android:text="0" />

                <RadioButton
                    android:id="@+id/grain2"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="1-3" />

                <RadioButton
                    android:id="@+id/grain3"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="4-5" />

                <RadioButton
                    android:id="@+id/grain4"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="3"
                    android:text="6-7" />

                <RadioButton
                    android:id="@+id/grain5"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="4"
                    android:text="8+" />
            </info.hoang8f.android.segmented.SegmentedGroup>

            <TextView
                android:id="@+id/vegetablesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/grain"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/vegetables_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff" />

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/vegetables"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/grain"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                segmentedgroup:border_width="2dp"
                segmentedgroup:corner_radius="10dp">

                <RadioButton
                    android:id="@+id/vegetable1"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:tag="-1"
                    android:text="0" />

                <RadioButton
                    android:id="@+id/vegetable2"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="1" />

                <RadioButton
                    android:id="@+id/vegetable3"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="2" />

                <RadioButton
                    android:id="@+id/vegetable4"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="3"
                    android:text="3" />

                <RadioButton
                    android:id="@+id/vegetable5"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="4"
                    android:text="4+" />
            </info.hoang8f.android.segmented.SegmentedGroup>


            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/grain"
                android:orientation="horizontal">

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/cancel_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/save_game_button"
                    android:text="@string/cancel"
                    bootstrap:bb_roundedCorners="true"
                    bootstrap:bb_type="danger" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/save_player_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/save"
                    bootstrap:bb_roundedCorners="true"
                    bootstrap:bb_type="success" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
